# aichallenge-2024

./: .cspell.json  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  create_submit_file.bash  docker_build.sh  docker_exec.sh  docker_run.sh  modified_occupancy_grid_map.pgm  modified_occupancy_grid_map.yaml  resize.py  run_script.tmux  run_veihcle_tmux.sh  stop_vehicle_tmux.sh  zenoh.json5  zenoh_kart_run.sh
aichallenge/workspace/src/aichallenge_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_launch/data/: accel_map.csv
aichallenge/workspace/src/aichallenge_launch/launch/: aichallenge.launch.xml  aichallenge_submit.launch.xml  aichallenge_system.launch.xml  tier4_control_component.launch.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/config/: behavior_path_planner.param.yaml  behavior_path_planner_tree.xml  imu_corrector.param.yaml  localizer_plotjuggler.xml  vehicle_plotjuggler.xml  vehicle_velocity_converter.param.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/data/: accel_map.csv  brake_map.csv
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit-mpc.launch.xml  aichallenge_submit.launch.xml  control.launch.py  host.launch.xml  map_server.launch.py  reference-mpc.launch.xml  reference.launch.xml  tier4_control_component.launch.xml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/map/: lanelet2_map.osm  lanelet2_map_low_curvature.osm  lanelet2_map_optim.osm  lanelet2_map_separated.osm  map.pgm  map.yaml  occupancy_grid_map.pgm  occupancy_grid_map.yaml
aichallenge/workspace/src/aichallenge_submit/aichallenge_submit_launch/param/: mpc.param.yaml
aichallenge/workspace/src/aichallenge_submit/booars_dummy_perception_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/booars_dummy_perception_publisher/src/: dummy_objects_publisher.cpp
aichallenge/workspace/src/aichallenge_submit/booars_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/data/: brake_map.csv
aichallenge/workspace/src/aichallenge_submit/booars_launch/launch/: booars.launch.xml
aichallenge/workspace/src/aichallenge_submit/booars_launch/map/: lanelet2_map.osm  lanelet2_map_opt.osm  lanelet2_map_opt_pre.osm
aichallenge/workspace/src/aichallenge_submit/booars_utils/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/control/ackermann_control_publisher/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/booars_costmap_generator/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/booars_costmap_utils/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/cached_lanelet_costmap/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/lanelet_costmap/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/multi_layered_costmap/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/multi_layered_costmap_visualizer/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap/predicted_object_costmap/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap_server/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/costmap_server/config/: costmap.param.yaml
aichallenge/workspace/src/aichallenge_submit/costmap_server/src/: costmap_2d.cpp  costmap_2d.hpp
aichallenge/workspace/src/aichallenge_submit/csv_editor/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/csv_editor/config/: params.yaml
aichallenge/workspace/src/aichallenge_submit/csv_editor/src/: csv_editor.cpp
aichallenge/workspace/src/aichallenge_submit/csv_path_changer_msgs/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/gps_module/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/gps_module/config/: gps_module.params.yaml
aichallenge/workspace/src/aichallenge_submit/gps_module/launch/: gps_module.launch.xml
aichallenge/workspace/src/aichallenge_submit/gps_module/src/: gps_module.cpp  true_gps_module.cpp
aichallenge/workspace/src/aichallenge_submit/param_controller/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/param_controller/src/: param_controller.cpp
aichallenge/workspace/src/aichallenge_submit/section_timer/: CMakeLists.txt  README.md  package.xml
aichallenge/workspace/src/aichallenge_submit/section_timer/config/: sections.yaml
aichallenge/workspace/src/aichallenge_submit/section_timer/launch/: section_timer.launch.xml
aichallenge/workspace/src/aichallenge_submit/section_timer/src/: section_timer_node.cpp
aichallenge/workspace/src/aichallenge_submit/stanley_control/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/stanley_control/src/: stanley_control.cpp
aichallenge/workspace/src/aichallenge_submit/vehicle_state_culculator/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_submit/vehicle_state_culculator/src/: vehicle_state_culculator.cpp
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/config/: sensor_converter.param.yaml
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/launch/: aichallenge_awsim_adapter.launch.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_awsim_adapter/src/: actuation_cmd_converter.cpp  actuation_cmd_converter.hpp  sensor_converter.cpp  sensor_converter.hpp
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/: CMakeLists.txt  package.xml
aichallenge/workspace/src/aichallenge_system/aichallenge_system_launch/config/: autoware.rviz  (+2 more)
(+256 files in other folders)
