<?xml version="1.0"?>
<package format="3">
  <name>aichallenge_system_launch</name>
  <version>0.1.0</version>
  <description>The aichallenge_system_launch package</description>

  <maintainer email="isamu.takagi@tier4.jp">Takagi Isamu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>aichallenge_submit_launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
