<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackermann_control_publisher</name>
  <version>0.0.1</version>
  <description>Bundles individual lateral/longitudinal commands and publishes them as `AckermannControlCommand` message</description>
  <maintainer email="sitahara@g.ecc.u-tokyo.ac.jp">Shotaro Itahara</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
