<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>booars_costmap_utils</name>
  <version>0.0.0</version>
  <description>The booars_costmap_utils pkg</description>
  <maintainer email="harada.akiro@gmail.com">Akiro Harada</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>lanelet_costmap</depend>
  <depend>multi_layered_costmap</depend>
  <depend>predicted_object_costmap</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>